# fivetris

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  settings.json
.github/workflows/: pages.yml  release.yml
scripts/: fivetris.desktop  install.sh
site/: index.html  style.css
src/: lib.rs  main.rs  resources.rs  web.rs
src/app/: actions.rs  commands.rs  controller.rs  dialogs.rs  mod.rs  screenshot_crop.rs  test.rs  ui_state.rs  view.rs
src/app/commands/: clipboard.rs  edit.rs  settings.rs
src/config/: key_names.rs  mod.rs  settings.rs  skins.rs  static_queue.rs
src/core/: bag.rs  board.rs  codec.rs  game_loop.rs  game_state.rs  highlight.rs  history.rs  hold.rs  input.rs  mod.rs  modes.rs  piece.rs  rotation.rs  scoring.rs  test_support.rs
src/media/: audio.rs  mod.rs
src/media/audio/: mod.rs  rodio_impl.rs  wasm_impl.rs
src/platform/: clipboard.rs  mod.rs  screenshot_analyzer.rs  screenshot_fallback.rs  screenshot_portal.rs  screenshot_windows.rs
src/render/: board_painter.rs  components.rs  mod.rs  settings_ui.rs  sidebar.rs  texture_atlas.rs  theme.rs
tests/: gameplay.rs  screenshot_analyzer.rs  serialization.rs
