[package]
name = "fivetris"
version = "0.2.0"
edition = "2024"

[dependencies]
base64 = "0.22"
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
crossbeam-channel = "0.5"
rodio = "0.20"
image = "0.25"
rand = { version = "0.8", features = ["small_rng"] }
arboard = "3"
raw-window-handle = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
ashpd = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = true
strip = "symbols"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
