[package]
name = "fivetris"
version = "0.3.2"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fivetris"
path = "src/main.rs"
required-features = ["native"]

[features]
default = ["native"]
native = []

[dependencies]
base64 = "0.22"
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
image = "0.25"
rand = { version = "0.8", features = ["small_rng"] }
web-time = "1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6"
rodio = "0.20"
arboard = "3"
raw-window-handle = "0.6"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "linux")))'.dependencies]
rfd = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlCanvasElement", "HtmlElement", "console", "Storage",
    "FileReader", "HtmlInputElement",
    "AudioContext", "AudioBuffer", "AudioBufferSourceNode", "GainNode",
    "AudioNode", "AudioParam", "AudioDestinationNode",
    "ClipboardEvent", "DataTransfer", "DataTransferItem", "DataTransferItemList", "File",
] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
ashpd = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = true
strip = "symbols"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
